welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: not found: value nomdelacase
while (nomdelacase != 0){
       ^BDR2:3: error: not found: value nomdelacase
nomdelacase=litMessage()
^BDR2:5: error: not found: value nomdelacase
nomdelacase  match{
^BDR2:37: error: not found: value nomdelacase
  case _ => nomdelacase=0
            ^